--- a/soc/silabs/common/CMakeLists.txt
+++ b/soc/silabs/common/CMakeLists.txt
@@ -6,6 +6,7 @@ endif()
 
 zephyr_sources_ifdef(CONFIG_SOC_GECKO_PM_BACKEND_EMU    soc_power.c)
 zephyr_sources_ifdef(CONFIG_SOC_GECKO_PM_BACKEND_PMGR   soc_power_pmgr.c)
+zephyr_sources_ifdef(CONFIG_SOC_SIWX91X_PM_BACKEND_PMGR soc_siwx91x_power_pmgr.c)
 
 zephyr_include_directories(.)
 
