--- a/samples/basic/blinky/prj.conf
+++ b/samples/basic/blinky/prj.conf
@@ -1,1 +1,7 @@
 CONFIG_GPIO=y
+CONFIG_PM=y
+CONFIG_LOG=y
+CONFIG_CODE_DATA_RELOCATION_SRAM=y
+CONFIG_SRAM_VECTOR_TABLE=y
+CONFIG_DEBUG_OPTIMIZATIONS=y
+CONFIG_FLASH=y
